--- a/stick.html
+++ b/stick.html
@@ -7,7 +7,8 @@
     <script src="./common.js"></script>
 </head>
 <body>
-    <div style = "width:200px;height:10px;margin: 200px;"></div>
+    <div class="div" style = "width:200px;height:10px;margin: 200px;"></div>
+    <div id="11"></div>
     <p style = "width:1200px;height:10px;margin: 200px;"></p>
 </body>
 </html>
