--- a/stick.html
+++ b/stick.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="div" style = "width:200px;height:10px;margin: 200px;"></div>
-    <p style = "width:1200px;height:10px;margin: 200px;"></p>
+    <div class="div2" style = "width:200px;height:10px;margin: 200px;"></div>
+    <div class="div3" style = "width:200px;height:10px;margin: 200px;"></div>
+    <div class="div4" style = "width:200px;height:10px;margin: 200px;"></div>
+    <input type="number">
+    <button>go</button>
 </body>
 </html>
